[package]
name = "librustcraft"
version = "0.1.0"
edition = "2021"

[features]
default = ["dylib"]
dylib = ["dlopen2"]

[dependencies]
actix-web = "4"
tokio = "1.38.0"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.80"

dlopen2 = { version = "0.7.0", optional = true }